# physflow-earth

./: .dockerignore  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ghcr-publish.yml
configs/: default.yaml  era5_precip.yaml  sentinel2_x4.yaml
docker/: Dockerfile.cpu
docs/: EVIDENCE.md  index.html  method.md
paper/: main.tex  refs.bib
results/hrrr/: RESULTS.md  run-11316836.out  summary.json
scripts/: download_worldstrat.sh  run_hrrr_experiment.py  run_hrrr_experiment.sbatch  submit_msi.slurm
space/: README.md  app.py  requirements.txt
src/physflow/: __init__.py
src/physflow/data/: __init__.py  era5_chirps.py  worldstrat.py
src/physflow/eval/: worldstrat_bench.py
src/physflow/flow/: __init__.py  adjoint.py  rectified.py  sampling.py
src/physflow/kicdpm/: README.md  __init__.py  config.py  data.py  diffusion.py  eval.py  kriging.py  model.py  train.py  unet.py
src/physflow/models/: __init__.py  conditioning.py  dit.py  pipeline.py
src/physflow/pggenfm/: README.md  __init__.py  demo.py  guidance.py
src/physflow/physics/: __init__.py  operators.py  residual.py
src/physflow/training/: train.py
tests/: test_kicdpm.py  test_pggenfm.py  test_physics_residuals.py  test_rectified_flow.py  test_smoke.py
