[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "physflow"
version = "0.1.0"
description = "Physics-informed rectified flow for Earth observation super-resolution and climate downscaling."
authors = [{name = "Arun Sharma", email = "arun08sharma@gmail.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch>=2.3",
  "diffusers>=0.30",
  "transformers>=4.45",
  "accelerate>=0.34",
  "numpy>=1.26",
  "xarray>=2024.5",
  "netcdf4>=1.6",
  "pyproj>=3.6",
  "rasterio>=1.3",
  "hydra-core>=1.3",
  "omegaconf>=2.3",
  "tqdm>=4.66",
  "wandb>=0.16",
  "huggingface_hub>=0.24",
  "torchdiffeq>=0.2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "mypy"]
space = ["gradio>=4.40", "folium>=0.17", "branca>=0.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
